# Modular3DMultiObjectTracker

./: .gitignore  CMakeLists.txt  README.md  future_work.md
configs/: MOT_v1.json  MOT_v2.json  MOT_v2_runtime.json
include/: associator.hpp  cost_function.hpp  detection.hpp  detector.hpp  gt_detector.hpp  kalman_filter.hpp  linear_kf.hpp  motion_model.hpp  pointpillars_detector.hpp  pointpillars_runtime_detector.hpp  scene.hpp  track.hpp  tracker.hpp  types.hpp
models/pointpillars/: pointpillars_pfe.onnx
models/pointpillars/precomputed_detections/: scene_0001.json  scene_0002.json  scene_0003.json  scene_0004.json  scene_0005.json  scene_0006.json  scene_0007.json  scene_0008.json  scene_0009.json
scripts/: check_nuscenes.py  evaluate.py  export_gt_detections.py  export_scene_nuscenes.py  patch_nuscenes_eval.py  validate_gt_json.py
src/: associator.cpp  cost_function.cpp  detector.cpp  gt_detector.cpp  kalman_filter.cpp  linear_kf.cpp  main.cpp  pointpillars_detector.cpp  pointpillars_runtime_detector.cpp  track.cpp  tracker.cpp
